--- a/app/src/main/res/layout/layout_image_item.xml
+++ b/app/src/main/res/layout/layout_image_item.xml
@@ -7,10 +7,24 @@
     app:cardCornerRadius="8dp"
     app:cardElevation="5dp">
 
-    <ImageView
-        android:id="@+id/img"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
+        android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/txt_desc"
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
+    </LinearLayout>
+
 
 </androidx.cardview.widget.CardView>
